rename du main2 et modif index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    test 2
+    test yes yes et no
     <script src="main.js"></script>
 </body>
 </html>
